# physics_utils

./: .gitignore  README.md  constants.py  pyproject.toml  requirements.txt  spec_props.py
dsmc/: hs.ph
fluids/: fluids_utils.py  normal_shock.py  stag_heating_coor.py  temp.py  tests.ipynb
freestream_conditions/monaco_faster_5sp/: calc_inflow_mass.py  calc_inflow_mass_fun.py  conditions_gram_mass_110.txt  conditions_gram_mass_70.txt  conditions_gram_mass_85.txt  earthgram_parser.py  example_earthgram_usage.py  faster_OUTPUT.csv
phys_math/: math_tools.py
physics_utils/: __init__.py  constants.py  spec_props.py
physics_utils/dsmc/: hs.py
physics_utils/fluids/: fluids_utils.py  normal_shock.py  readme.md  test_find_rh_conds.py
physics_utils/freestream_conditions/: conditions_gram_v2.py
physics_utils/freestream_conditions/monaco_faster_5sp/: calc_inflow_mass_fun.py  conditions_gram_mass.txt  conditions_gram_mass_5.txt  conditions_gram_mass_50.txt  conditions_gram_mass_80.txt  earthgram_parser.py  example_earthgram_directory_envelope.py  mfp_altitude.py  mfp_altitude_fun.py  parse_altitude_max_rho_peturb.py  plot_conditions_gram.py  plot_earthgram_envelope.py  plot_mpc_envelop.py  readme.txt
physics_utils/random_utils/: __init__.py  colors.py  plot_convergence.py
physics_utils/tecplot_tools/: tecplot_tools.py
radiation/: steph_boltz.py
random_utils/: colors.py
