[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "physics_utils"
version = "0.1.0"
description = "Utility functions for physics workflows"
authors = [{name="Mitch Wall"}]
dependencies = ["numpy",
                "scipy",
                "pandas",
                "matplotlib"]
